# seiskit

./: .gitignore  LICENSE  PARALLEL_README.md  README.md  pyproject.toml
.github/workflows/: test.yml
comparison/BC_width/: README_JOBS.md  job_experiment.sh  job_plot.sh  run_experiment.py  submit_jobs.sh  view_timing_results.sh
comparison/Case1a/: check_ttf.py  run_case.py
comparison/Case4b/: run_case.py
comparison/Case4b/data/: Case4-Vs.csv  Case4-nu.csv  Case4-rho.csv
comparison/Parametric_study/: HANG_FIX_SUMMARY.md  README_statistics.md  analyze_statistics.py  check_array_jobs.sh  check_job_status.sh  debug_task.sh  job_experiment.sh  run_experiment.py  view_timing_results.sh
comparison/Spatial_width/: job_experiment.sh  job_submission.sh  run_experiment.py  run_experiment_SLURM.py  view_timing_results.sh
seiskit/: __init__.py  analysis.py  builder.py  config.py  damping.py  gaussian_field.py  general_analysis.py  isolated_runner.py  joblib_parallel.py  optools.py  parallel.py  plot_results.py  recorders.py  run_analysis.py  setup_logger.py  spatial_variability.py  utils.py
seiskit.egg-info/: PKG-INFO
seiskit/ttf/: TTF.py  acc2FAS2.py  kohmachi.py
tests/: ricker.in  ricker.in:Zone.Identifier  test_analysis.py  test_builder.py  test_comprehensive.py  test_config.py  test_damping.py  test_joblib_parallel.py  test_parallel.py  test_ricker.py  test_ttf_and_acc.py  test_utils.py
