[project]
name = "seiskit"
version = "0.1.0"
description = "This project is for OpenSees study on spatial variability in soil wave propagation."
authors = [
    { name = "Kurt Walter Soncco Sinchi", email = "kurtwal98@berkeley.edu" },
]
# Narrows the compatible Python versions to prevent future errors
requires-python = ">=3.10" 
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "openseespy",
    "xara",
    "plotly",
    "kaleido",
    "joblib"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.setuptools]
packages = ["seiskit"]

[tool.pytest.ini_options]
pythonpath = ["."]


[tool.uv]
package = true

[project.urls]
"Homepage" = "https://example.invalid/"

